# snowboy_ros

./: CMakeLists.txt  README.md  package.xml
include/snowboy_ros/: hotword_detector.h
launch/: snowboy.launch
resources/: HiAqua.pmdl
src/: hotword_detector.cpp  hotword_detector_node.cpp
